--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -2,21 +2,33 @@ body{
   background: rgb(56, 56, 56);
 }
 .boop {
+  position: relative; /* Add relative positioning to the container */
   font-size: 60px;
   width: 1700px;
-
-  background: linear-gradient(45deg, #9d16df, #3156e8);
-  background-size: 100%;
-  -webkit-background-clip: text;
   color: transparent;
-  transition: color 2s ease;
+  overflow: hidden; /* Hide overflowing content */
+}
 
+.boop {
+  position: relative;
+  font-size: 60px;
+  width: 1700px;
+  color: transparent;
+  overflow: hidden;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(180deg, #3156e8, #9d16df);
+  transition: background-image 3s ease, color 3s ease; 
 }
 .boop:hover {
-  background-image: linear-gradient(45deg, #3156e8, #9d16df);
-  color: #8962ff;
-  text-shadow: 0 0 5px rgba(137, 98, 255, 0.7);
+  color: #8962ff; /* Set the final text color on hover */
+  background-image: linear-gradient(180deg, #9d16df, #3156e8);
+  transition: background-image 3s ease, color 3s ease; 
 }
+.noteText{
+  font-size: 30px;
+  background-image: linear-gradient(80deg, #c579eb, #5e7bf1);
+}
+
 .background {
     position: fixed;
     top: 0;
@@ -28,4 +40,11 @@ body{
 
 .video{
     object-fit: cover;
+}
+
+.emailText{
+    display: flex;
+    justify-content: center;
+    padding-left: 250px;
+ 
 }
