--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Mooli&display=swap');
+
+
 body{
   background: rgb(56, 56, 56);
+  font-family: 'Mooli', 'sans-serif';
 }
 .boop {
   position: relative; /* Add relative positioning to the container */
@@ -16,12 +20,12 @@ body{
   color: transparent;
   overflow: hidden;
   -webkit-background-clip: text;
-  background-image: linear-gradient(180deg, #3156e8, #9d16df);
+  background-image: linear-gradient(180deg, #3156e8, #b852a1);
   transition: background-image 3s ease, color 3s ease; 
 }
 .boop:hover {
   color: #8962ff; /* Set the final text color on hover */
-  background-image: linear-gradient(180deg, #9d16df, #3156e8);
+  background-image: linear-gradient(180deg, #b852a1, #3156e8);
   transition: background-image 3s ease, color 3s ease; 
 }
 .noteText{
@@ -42,9 +46,3 @@ body{
     object-fit: cover;
 }
 
-.emailText{
-    display: flex;
-    justify-content: center;
-    padding-left: 250px;
- 
-}
