--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -20,12 +20,12 @@ body{
   color: transparent;
   overflow: hidden;
   -webkit-background-clip: text;
-  background-image: linear-gradient(180deg, #3156e8, #b852a1);
+  background-image: linear-gradient(210deg, #3156e8, #b852a1);
   transition: background-image 3s ease, color 3s ease; 
 }
 .boop:hover {
   color: #8962ff; /* Set the final text color on hover */
-  background-image: linear-gradient(180deg, #b852a1, #3156e8);
+  background-image: linear-gradient(210deg, #b852a1, #3156e8);
   transition: background-image 3s ease, color 3s ease; 
 }
 .noteText{
@@ -44,5 +44,9 @@ body{
 
 .video{
     object-fit: cover;
+}
+
+.aboutIcons{
+  margin-top: -150px;
 }
 
