--- a/src/CSS/Contact.css
+++ b/src/CSS/Contact.css
@@ -1,13 +1,14 @@
 .formText {
+  font-size: 40px;
   color: transparent;
   overflow: hidden;
   -webkit-background-clip: text;
-  background-image: linear-gradient(180deg, #3156e8, #9d16df);
+  background-image: linear-gradient(210deg, #3156e8, #9d16df);
   transition: background-image 3s ease, color 3s ease;
 }
 .formText:hover{
     color: #8962ff;
-    background-image: linear-gradient(180deg, #9d16df, #3156e8);
+    background-image: linear-gradient(210deg, #9d16df, #3156e8);
     transition: background-image 3s ease, color 3s ease;
 }
 .textBox{
