--- a/src/CSS/AboutMe.css
+++ b/src/CSS/AboutMe.css
@@ -1,7 +1,23 @@
 .iconGlow{
-    transition: box-shadow 3s ease;
+    transition: filter 0.3s ease;
 }
 .iconGlow:hover{
+    filter: drop-shadow(0 0 60px #8962ff);
+ 
     transform: scale(1.1);
+    transition: transform 0.3s ease, filter 0.3s ease; 
+}
+
+.buttonTheme{
+    background-color:  #8962ff;
+    font-size: 30px;
+    background-image: linear-gradient(210deg, #3156e8, #b852a1);
+
+   transition: box-shadow 3s ease;
+}
+.buttonTheme:hover{
+    box-shadow: 0 0 100px #8962ff;
+    transform: scale(1.1); 
     transition: transform 0.3s ease; 
+    
 }
