--- a/src/CSS/AboutMe.css
+++ b/src/CSS/AboutMe.css
@@ -8,16 +8,8 @@
     transition: transform 0.3s ease, filter 0.3s ease; 
 }
 
-.buttonTheme{
-    background-color:  #8962ff;
-    font-size: 30px;
-    background-image: linear-gradient(210deg, #3156e8, #b852a1);
+.aboutIcons{
+    margin-top: -150px;
+  }
 
-   transition: box-shadow 3s ease;
-}
-.buttonTheme:hover{
-    box-shadow: 0 0 100px #8962ff;
-    transform: scale(1.1); 
-    transition: transform 0.3s ease; 
-    
-}
+
