--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -5,13 +5,6 @@ body{
   background: rgb(56, 56, 56);
   font-family: 'Mooli', 'sans-serif';
 }
-.boop {
-  position: relative; /* Add relative positioning to the container */
-  font-size: 60px;
-  width: 1700px;
-  color: transparent;
-  overflow: hidden; /* Hide overflowing content */
-}
 
 .boop {
   position: relative;
@@ -28,6 +21,21 @@ body{
   background-image: linear-gradient(210deg, #b852a1, #3156e8);
   transition: background-image 3s ease, color 3s ease; 
 }
+
+.buttonTheme{
+  background-color:  #8962ff;
+  font-size: 30px;
+  background-image: linear-gradient(210deg, #3156e8, #b852a1);
+
+ transition: box-shadow 3s ease;
+}
+.buttonTheme:hover{
+  box-shadow: 0 0 100px #8962ff;
+  transform: scale(1.1); 
+  transition: transform 0.3s ease; 
+  
+}
+
 .noteText{
   font-size: 30px;
   background-image: linear-gradient(80deg, #c579eb, #5e7bf1);
@@ -46,7 +54,20 @@ body{
     object-fit: cover;
 }
 
-.aboutIcons{
-  margin-top: -150px;
+.textContainer {
+  border: 2px solid #8962ff;
+  border-radius: 20px;
+  max-width: 90%;
+  margin: auto;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.3s ease; /* Smooth transition */
 }
+
+.textContainer:hover {
+  background-color: rgba(137, 98, 255, 0.1); 
+}
+
+
 
