--- a/src/CSS/Contact.css
+++ b/src/CSS/Contact.css
@@ -38,3 +38,21 @@
   justify-content: center;
   padding-left: 250px;
 }
+
+.modalStyle .modal-content{
+
+  background-color: black;
+}
+.modalText{
+  color: transparent;
+  overflow: hidden;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(210deg, #3156e8, #b852a1);
+  transition: background-image 3s ease, color 3s ease; 
+}
+.modalText:hover{
+  color: #8962ff;
+  background-image: linear-gradient(210deg, #b852a1, #3156e8);
+  transition: background-image 3s ease, color 3s ease; 
+}
+
