--- a/src/CSS/Menu.css
+++ b/src/CSS/Menu.css
@@ -3,7 +3,7 @@
     font-size: 5rem;
   }
   .nav-link:hover, .navbar-brand:hover{
-      color: #3156e8 !important;
+      color: #8962ff !important;
       text-shadow: 0 0 5px rgba(137, 98, 255, 0.7);
   }
   .nav-link{
