--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -61,6 +61,7 @@ body{
   margin: auto;
   text-align: center;
   padding: 20px;
+  margin-top: 3%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease; /* Smooth transition */
 }
